# llm-cost-observability

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
.claude/skills/llm-observability-integrate/: SKILL.md
.claude/skills/llm-observability-query/: SKILL.md
client/: pyproject.toml
client/llm_client/: __init__.py  client.py
client/tests/: test_tags.py
dashboard/: components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css  main.tsx
dashboard/src/components/: call-drawer.tsx  calls-table.tsx  datetime-range-picker.tsx  filter-bar.tsx  message-card.tsx  mode-toggle.tsx  tag-select.tsx
dashboard/src/components/ui/: badge.tsx  calendar.tsx  checkbox.tsx  command.tsx  dropdown-menu.tsx  select.tsx  table.tsx
dashboard/src/lib/: datetime.ts
dashboard/src/pages/: calls.tsx  login.tsx
proxy/: Dockerfile  __init__.py  auth.py  cel_filter.py  clickhouse_logger.py  config.yaml  dashboard_api.py  requirements.txt
scripts/: smoke_test.py
sql/: 001_litellm_logs.sql  002_add_richer_columns.sql  queries.sql
