[project]
name = "llm-client"
version = "0.1.0"
description = "Tag-enforcing wrapper around the OpenAI SDK pointed at LiteLLM proxy."
requires-python = ">=3.10"
dependencies = ["openai>=1.40.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_client*"]
